--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -24,3 +25,7 @@ dist-ssr
 *.sw?
 
 NavbarDraft.jsx
+.firebase/
+build/
+.firebaserc
+firebase.json
